# vokiz

./: AUTHORS.md  LICENSE  README.md  pyproject.toml
vokiz/: cli.py  config.py  processor.py  resource.py  schema.py
vokiz/backends/: __init__.py  none.py  voipms.py
