[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

[tool.poetry]
name = "vokiz"
version = "1.0dev1"
description = "SMS Group Messaging"
readme = "README.md"
authors = ["Paul Bryan <pbryan@anode.ca>"]
homepage = "https://github.com/vokiz/vokiz/"
documentation = "https://github.com/vokiz/vokiz/tree/master/docs"
license = "MIT"
keywords = ["wsgi", "framework", "resource", "openapi"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.dependencies]
click = "^7.1"
python = "^3.8"
roax = "^2.0a8"
wrapt = "^1.12"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "^2.3"
pytest = "^5.4"
pytest-cov = "^2.8"

[tool.poetry.scripts]
vokiz = "vokiz.cli:main"

